--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "npx jest --detectOpenHandles",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "push": "chmod +x ./shell/push.sh && ./shell/push.sh",
+    "build": "chmod +x ./shell/build.sh && ./shell/build.sh",
+    "version": "chmod +x ./shell/version.sh && ./shell/version.sh"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +16,7 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
     "dotenv": "^16.3.1",
+    "husky": "^9.0.6",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
