--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "ts-node src/index.ts",
     "push": "chmod +x ./shell/push.sh && ./shell/push.sh",
     "build": "chmod +x ./shell/build.sh && ./shell/build.sh",
-    "version": "chmod +x ./shell/version.sh && ./shell/version.sh"
+    "version": "chmod +x ./shell/version.sh && ./shell/version.sh",
+    "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
