--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "name": "ts-files",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "keywords": [
+    "typescript",
+    "files",
+    "csv",
+    "json",
+    "chunks"
+  ],
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "lint": "eslint .",
     "test": "npx jest --detectOpenHandles",
     "dev": "ts-node src/index.ts",
     "push": "chmod +x ./shell/push.sh && ./shell/push.sh",
@@ -13,10 +24,18 @@
   },
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jonathanchowjh/ts-files.git"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
     "dotenv": "^16.3.1",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "husky": "^9.0.6",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
